kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-service
spec:
  selector:
    app: ziliotidev
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
